--- a/Camps&Webinar.html
+++ b/Camps&Webinar.html
@@ -167,7 +167,8 @@
 
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                        <button type="button" class="p-2 rounded-3 border-0" style="background-color: #229ea6; color: #fff;">Continue</button>
+                        <button type="button" class="p-2 rounded-3 border-0"
+                            style="background-color: #229ea6; color: #fff;">Continue</button>
                     </div>
                 </div>
             </div>
@@ -1104,10 +1105,8 @@
         <!-- Free webinar end -->
 
         <!-- Paid Camps -->
-        <!-- Wellness Activites -->
         <div class="container mt-4">
-            <!-- <h3 class="fw-bold mt-5">Paid Camps</h3> -->
-            <h3 class="fw-bold mt-5">Wellness Activities</h3>
+            <h3 class="fw-bold mt-5">Paid Camps</h3>
             <div class="mb-3">
                 <a href="#" class="allbtn btn text-white p-2 rounded" style="background-color: #229ea6;">Online</a>
                 <a href="#" class="allbtn btn text-white p-2 rounded" style="background-color: #229ea6;">Offline</a>
@@ -1570,6 +1569,155 @@
                     </div>
                 </div>
 
+                <!-- Card 1 -->
+                <div class="col-lg-3 col-md-4 col-sm-6">
+                    <div class="bg-white rounded p-3 equal-height">
+                        <div class="card-container rounded shadow-lg">
+                            <img src="./asset/Paid-Camp/Bone Density.jpg" alt="Eye Care" class="d-block w-100 rounded"
+                                height="250px" style="object-fit: cover;">
+                            <div
+                                class="overlay d-flex flex-column justify-content-center align-items-center text-center">
+                                <a href="#" class="p-2 px-3 rounded fw-bold text-decoration-none select-btn"
+                                    style="background-color: #fff; color: #229ea6;" data-bs-toggle="modal"
+                                    data-bs-target="#bookingModal" data-event="Bone Density" data-fees="7000">
+                                    Select
+                                </a>
+                            </div>
+                        </div>
+                        <div class="fw-bold text-center mt-3" style="font-size: 16px;">Bone Density</div>
+                        <div class="fw-bold d-flex justify-content-between align-items-center mt-3">
+                            <p class="text-center">Offline price<span class="d-block text-info">₹7000</span>
+                            </p>
+                            <p class="text-center">Online price<span class="text-success d-block">N/A</span></p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Card 2 -->
+                <div class="col-lg-3 col-md-4 col-sm-6">
+                    <div class="bg-white rounded p-3 equal-height">
+                        <div class="card-container rounded shadow-lg">
+                            <img src="./asset/Paid-Camp/First Aid Training.jpg" alt="Child Health"
+                                class="d-block w-100 rounded" height="250px" style="object-fit: cover;">
+                            <div
+                                class="overlay d-flex flex-column justify-content-center align-items-center text-center">
+                                <a href="#" class="p-2 px-3 rounded fw-bold text-decoration-none select-btn"
+                                    style="background-color: #fff; color: #229ea6;" data-bs-toggle="modal"
+                                    data-bs-target="#bookingModal" data-event="First Aid Training" data-fees="7000">
+                                    Select
+                                </a>
+                            </div>
+                        </div>
+                        <div class="fw-bold text-center mt-3" style="font-size: 16px;">First Aid Training</div>
+                        <div class="fw-bold d-flex justify-content-between align-items-center mt-3">
+                            <p class="text-center">Offline price<span class="d-block text-info">₹7000</span>
+                            </p>
+                            <p class="text-center">Online price<span class="text-success d-block">N/A</span></p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Card 3 -->
+                <div class="col-lg-3 col-md-4 col-sm-6">
+                    <div class="bg-white rounded p-3 equal-height">
+                        <div class="card-container rounded shadow-lg">
+                            <img src="./asset/Paid-Camp/Hair & Skin.jpg" alt="Diabetes Awareness"
+                                class="d-block w-100 rounded" height="250px" style="object-fit: cover;">
+                            <div
+                                class="overlay d-flex flex-column justify-content-center align-items-center text-center">
+                                <a href="#" class="p-2 px-3 rounded fw-bold text-decoration-none select-btn"
+                                    style="background-color: #fff; color: #229ea6;" data-bs-toggle="modal"
+                                    data-bs-target="#bookingModal" data-event="Hair & Skin" data-fees="10,000">
+                                    Select
+                                </a>
+                            </div>
+                        </div>
+                        <div class="fw-bold text-center mt-3" style="font-size: 16px;">Hair & Skin</div>
+                        <div class="fw-bold d-flex justify-content-between align-items-center mt-3">
+                            <p class="text-center">Offline price<span class="d-block text-info">₹10000</span>
+                            </p>
+                            <p class="text-center">Online price<span class="text-success d-block">N/A</span></p>
+                        </div>
+                    </div>
+                </div>
+
+
+                <!-- Card 4 -->
+                <div class="col-lg-3 col-md-4 col-sm-6">
+                    <div class="bg-white rounded p-3 equal-height">
+                        <div class="card-container rounded shadow-lg">
+                            <img src="./asset/Paid-Camp/Cancer screening camp.jpg" alt="Blood Donation"
+                                class="d-block w-100 rounded" height="250px" style="object-fit: cover;">
+                            <div
+                                class="overlay d-flex flex-column justify-content-center align-items-center text-center">
+                                <a href="#" class="p-2 px-3 rounded fw-bold text-decoration-none select-btn"
+                                    style="background-color: #fff; color: #229ea6;" data-bs-toggle="modal"
+                                    data-bs-target="#bookingModal" data-event="Cancer screening camp" data-fees="">
+                                    Select
+                                </a>
+                            </div>
+                        </div>
+                        <div class="fw-bold text-center mt-3" style="font-size: 16px;">Cancer screening camp</div>
+                        <div class="fw-bold d-flex justify-content-between align-items-center mt-3">
+                            <p class="text-center">Offline price<span class="d-block text-info">₹</span>
+                            </p>
+                            <p class="text-center">Online price<span class="text-success d-block">N/A</span></p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Card 5 -->
+                <div class="col-lg-3 col-md-4 col-sm-6">
+                    <div class="bg-white rounded p-3 equal-height">
+                        <div class="card-container rounded shadow-lg">
+                            <img src="./asset/Paid-Camp/Vaccination depending on the request.jpg" alt="Dental Care"
+                                class="d-block w-100 rounded" height="250px" style="object-fit: cover;">
+                            <div
+                                class="overlay d-flex flex-column justify-content-center align-items-center text-center">
+                                <a href="#" class="p-2 px-3 rounded fw-bold text-decoration-none select-btn"
+                                    style="background-color: #fff; color: #229ea6;" data-bs-toggle="modal"
+                                    data-bs-target="#bookingModal" data-event="Vaccination depending on the request"
+                                    data-fees="">
+                                    Select
+                                </a>
+                            </div>
+                        </div>
+                        <div class="fw-bold text-center mt-3" style="font-size: 16px;">Vaccination depending on the
+                            request</div>
+                            <div class="fw-bold d-flex justify-content-between align-items-center mt-3">
+                                <p class="text-center">Offline price<span class="d-block text-info">₹7000</span>
+                                </p>
+                                <p class="text-center">Online price<span class="text-success d-block">N/A</span></p>
+                            </div>
+                    </div>
+                </div>
+
+                <!-- Card 6 -->
+                <div class="col-lg-3 col-md-4 col-sm-6">
+                    <div class="bg-white rounded p-3 equal-height">
+                        <div class="card-container rounded shadow-lg">
+                            <img src="./asset/Paid-Camp/Seminars.jpg" alt="Dental Care" class="d-block w-100 rounded"
+                                height="250px" style="object-fit: cover;">
+                            <div
+                                class="overlay d-flex flex-column justify-content-center align-items-center text-center">
+                                <a href="#" class="p-2 px-3 rounded fw-bold text-decoration-none select-btn"
+                                    style="background-color: #fff; color: #229ea6;" data-bs-toggle="modal"
+                                    data-bs-target="#bookingModal" data-event="Seminars (Specialist Doctors)"
+                                    data-fees="8000 - 12,000">
+                                    Select
+                                </a>
+                            </div>
+                        </div>
+                        <div class="fw-bold text-center mt-3" style="font-size: 16px;">Seminars (Specialist Doctors)
+                        </div>
+                        <div class="fw-bold d-flex justify-content-between align-items-center mt-3">
+                            <p class="text-center">Offline price<span class="d-block text-info">₹8000</span>
+                            </p>
+                            <p class="text-center">Online price<span class="text-success d-block">N/A</span></p>
+                        </div>
+                    </div>
+                </div>
+
             </div>
 
         </div>
@@ -1694,135 +1842,6 @@
                             </div>
                         </div>
                         <div class="fw-bold text-center mt-3" style="font-size: 16px;">Basic Health Camp</div>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-        <!-- Complimentary Camps End-->
-
-        <!-- Paid Camps  -->
-        <div class="container mt-4">
-            <!-- <h3 class="fw-bold my-5">Complimentary Camps</h3> -->
-            <h3 class="fw-bold my-5">Paid Camps</h3>
-
-            <div class="row g-4">
-                <!-- Card 1 -->
-                <div class="col-lg-3 col-md-4 col-sm-6">
-                    <div class="bg-white rounded p-3 equal-height">
-                        <div class="card-container rounded shadow-lg">
-                            <img src="./asset/Paid-Camp/Bone Density.jpg" alt="Eye Care" class="d-block w-100 rounded"
-                                height="250px" style="object-fit: cover;">
-                            <div
-                                class="overlay d-flex flex-column justify-content-center align-items-center text-center">
-                                <a href="#" class="p-2 px-3 rounded fw-bold text-decoration-none select-btn"
-                                    style="background-color: #fff; color: #229ea6;" data-bs-toggle="modal"
-                                    data-bs-target="#bookingModal" data-event="Bone Density" data-fees="7000">
-                                    Select
-                                </a>
-                            </div>
-                        </div>
-                        <div class="fw-bold text-center mt-3" style="font-size: 16px;">Bone Density</div>
-                    </div>
-                </div>
-
-                <!-- Card 2 -->
-                <div class="col-lg-3 col-md-4 col-sm-6">
-                    <div class="bg-white rounded p-3 equal-height">
-                        <div class="card-container rounded shadow-lg">
-                            <img src="./asset/Paid-Camp/First Aid Training.jpg" alt="Child Health"
-                                class="d-block w-100 rounded" height="250px" style="object-fit: cover;">
-                            <div
-                                class="overlay d-flex flex-column justify-content-center align-items-center text-center">
-                                <a href="#" class="p-2 px-3 rounded fw-bold text-decoration-none select-btn"
-                                    style="background-color: #fff; color: #229ea6;" data-bs-toggle="modal"
-                                    data-bs-target="#bookingModal" data-event="First Aid Training" data-fees="7000">
-                                    Select
-                                </a>
-                            </div>
-                        </div>
-                        <div class="fw-bold text-center mt-3" style="font-size: 16px;">First Aid Training</div>
-                    </div>
-                </div>
-
-                <!-- Card 3 -->
-                <div class="col-lg-3 col-md-4 col-sm-6">
-                    <div class="bg-white rounded p-3 equal-height">
-                        <div class="card-container rounded shadow-lg">
-                            <img src="./asset/Paid-Camp/Hair & Skin.jpg" alt="Diabetes Awareness"
-                                class="d-block w-100 rounded" height="250px" style="object-fit: cover;">
-                            <div
-                                class="overlay d-flex flex-column justify-content-center align-items-center text-center">
-                                <a href="#" class="p-2 px-3 rounded fw-bold text-decoration-none select-btn"
-                                    style="background-color: #fff; color: #229ea6;" data-bs-toggle="modal"
-                                    data-bs-target="#bookingModal" data-event="Hair & Skin" data-fees="10,000">
-                                    Select
-                                </a>
-                            </div>
-                        </div>
-                        <div class="fw-bold text-center mt-3" style="font-size: 16px;">Hair & Skin</div>
-                    </div>
-                </div>
-
-
-                <!-- Card 4 -->
-                <div class="col-lg-3 col-md-4 col-sm-6">
-                    <div class="bg-white rounded p-3 equal-height">
-                        <div class="card-container rounded shadow-lg">
-                            <img src="./asset/Paid-Camp/Cancer screening camp.jpg" alt="Blood Donation"
-                                class="d-block w-100 rounded" height="250px" style="object-fit: cover;">
-                            <div
-                                class="overlay d-flex flex-column justify-content-center align-items-center text-center">
-                                <a href="#" class="p-2 px-3 rounded fw-bold text-decoration-none select-btn"
-                                    style="background-color: #fff; color: #229ea6;" data-bs-toggle="modal"
-                                    data-bs-target="#bookingModal" data-event="Cancer screening camp" data-fees="">
-                                    Select
-                                </a>
-                            </div>
-                        </div>
-                        <div class="fw-bold text-center mt-3" style="font-size: 16px;">Cancer screening camp</div>
-                    </div>
-                </div>
-
-                <!-- Card 5 -->
-                <div class="col-lg-3 col-md-4 col-sm-6">
-                    <div class="bg-white rounded p-3 equal-height">
-                        <div class="card-container rounded shadow-lg">
-                            <img src="./asset/Paid-Camp/Vaccination depending on the request.jpg" alt="Dental Care"
-                                class="d-block w-100 rounded" height="250px" style="object-fit: cover;">
-                            <div
-                                class="overlay d-flex flex-column justify-content-center align-items-center text-center">
-                                <a href="#" class="p-2 px-3 rounded fw-bold text-decoration-none select-btn"
-                                    style="background-color: #fff; color: #229ea6;" data-bs-toggle="modal"
-                                    data-bs-target="#bookingModal" data-event="Vaccination depending on the request"
-                                    data-fees="">
-                                    Select
-                                </a>
-                            </div>
-                        </div>
-                        <div class="fw-bold text-center mt-3" style="font-size: 16px;">Vaccination depending on the
-                            request</div>
-                    </div>
-                </div>
-
-                <!-- Card 6 -->
-                <div class="col-lg-3 col-md-4 col-sm-6">
-                    <div class="bg-white rounded p-3 equal-height">
-                        <div class="card-container rounded shadow-lg">
-                            <img src="./asset/Paid-Camp/Seminars.jpg" alt="Dental Care" class="d-block w-100 rounded"
-                                height="250px" style="object-fit: cover;">
-                            <div
-                                class="overlay d-flex flex-column justify-content-center align-items-center text-center">
-                                <a href="#" class="p-2 px-3 rounded fw-bold text-decoration-none select-btn"
-                                    style="background-color: #fff; color: #229ea6;" data-bs-toggle="modal"
-                                    data-bs-target="#bookingModal" data-event="Seminars (Specialist Doctors)"
-                                    data-fees="8000 - 12,000">
-                                    Select
-                                </a>
-                            </div>
-                        </div>
-                        <div class="fw-bold text-center mt-3" style="font-size: 16px;">Seminars (Specialist Doctors)
-                        </div>
                     </div>
                 </div>
 
