--- a/Camps&Webinar.html
+++ b/Camps&Webinar.html
@@ -1684,11 +1684,11 @@
                         </div>
                         <div class="fw-bold text-center mt-3" style="font-size: 16px;">Vaccination depending on the
                             request</div>
-                            <div class="fw-bold d-flex justify-content-between align-items-center mt-3">
-                                <p class="text-center">Offline price<span class="d-block text-info">₹7000</span>
-                                </p>
-                                <p class="text-center">Online price<span class="text-success d-block">N/A</span></p>
-                            </div>
+                        <div class="fw-bold d-flex justify-content-between align-items-center mt-3">
+                            <p class="text-center">Offline price<span class="d-block text-info">₹</span>
+                            </p>
+                            <p class="text-center">Online price<span class="text-success d-block">N/A</span></p>
+                        </div>
                     </div>
                 </div>
 
